deployments/k8s/groovv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groovv-io
spec:
  replicas: 3
  selector:
    matchLabels:
      app: groovv-io
  template:
    metadata:
      labels:
        app: groovv-io
    spec:
      containers:
        - name: groovv-io
          image: us-docker.pkg.dev/groovv-cloud/groovv-containers/groovv.io:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: groovv-io-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config:
      '{"default": "groovv-io-backend-config"}'
spec:
  selector:
    app: groovv-io
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groovv-io-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "groovv-io-ip"
spec:
  defaultBackend:
    service:
      name: groovv-io-service
      port:
        number: 80

#spec:
#  defaultBackend:
#    service:
#      name: groovv-io-service
#      port:
#        number: 8080
#---


#apiVersion: v1
#kind: Service
#metadata:
#  name: groovv-io-service
#spec:
#  type: ExternalName
#  externalName: app.groovv.co
#
#---

#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: groovv-io
#  annotations:
#    kubernetes.io/ingress.global-static-ip-name: groovv-io-ip
#  labels:
#    app: groov-io-service-ingress
#spec:
#  defaultBackend:
#    service:
#      name: groovv-io-service
#      port:
#        number: 8080
